--- a/README.org
+++ b/README.org
@@ -6,20 +6,53 @@
 Update Docker image semver tags in a Docker Compose file to the latest semver
 tags.
 
+** Depedencies
+
+When run locally, this project requires the following dependencies:
+- [[https://github.com/containers/skopeo][skopeo]]
+
+Otherwise, when [[id:7cef8ea0-17a5-438f-9d10-b885662920ad][run as a Docker container]], there is no need to worry about these
+dependencies.
 
 ** Usage
 
-To get the most recent version of the image =john-doe/hello-world= hosted on the
-registry =registry.io= with the tag =develop=, you can do the following
+Let us begin with an example compose file named ~compose.yaml~
 #+BEGIN_EXAMPLE shell
-  $ ciu inspect registry.io/john-doe/hello-world -t develop
-  >> v1.5.2
+  $ cat /home/user/examples/compose.yaml
+  >> ---
+  >> services
+  >> ...
+  >>   service-to-update
+  >>     image: registry.io/john-doe/hello-world:v1.2.2
+  >> ...
 #+END_EXAMPLE
 
-Suppose that in the Docker Compose file, a service using =john-doe/hello-world=
-is tagged with the version =v1.2.3=. To compare that with the result above, you
-can do the following
-#+BEGIN_EXAMPLE shell
-  $ ciu compare registry.io/john-doe/hello-world:v1.2.3 v1.5.2
-  >> registry.io/john-doe/hello-world:v1.5.2
-#+END_EXAMPLE
+Assume that we want to update the image =john-doe/hello-world= hosted on the
+registry =registry.io= with the tag =develop=, i.e., we want to match the
+semantic version of =registry.io/john-doe/hello-world:develop=. To accomplish
+this, we can do one of the following:
+
+**** Using the updater script
+
+Clone this repository, install the dependencies, and run the script.
+#+BEGIN_SRC shell
+  git clone https://github.com/arifer612/docker-tag-updater
+  cd docker-tag-updater
+  poetry install --only main
+  poetry run ./compose-updater.sh -t develop -f /home/user/examples/compose.yaml \
+         registry.io/john-doe/hello-world
+#+END_SRC
+
+**** Using Docker
+:PROPERTIES:
+:ID:       7cef8ea0-17a5-438f-9d10-b885662920ad
+:END:
+
+To update the image =john-doe/hello-world= hosted on the registry =registry.io=
+with the tag =develop=, i.e., you want to match the semantic version of
+=registry.io/john-doe/hello-world:develop=, you can do the following:
+#+BEGIN_SRC shell
+  $ cd /home/user/examples && \
+      docker run --rm ghcr.io/arifer612/docker-tag-updater \
+             registry.io/john-doe/hello-world develop
+#+END_SRC
